Details
-
Bug
-
Resolution: Fixed
-
Trivial
-
None
-
None
Description
0.4.8-RC-18-g64dcc95 gcc dbg
Reproduction steps
-run the setup of Microsoft Excel Viewer 2007 from rapps
-follow the setup wizard up to the page where you can select destination folder / drive
Expected result
-The drive-selection list-view should exclude all read-only CD-ROM drives (D,E,F in my pic)
Observed result
-Readonly drives are displayed as well erroneously
msi.png
0.4.8-RC-18-g64dcc95_msi.log
This is known to be broken down to at least ros 73036 (eventually since forever).
Attachments
Issue Links
- is blocked by
-
CORE-15127 Syncing ReactOS with Wine Staging 3.17
-
- Untriaged
-
- relates to
-
CORE-17623 [MSI] setup should not list read-only VBox-share as install-targets
-
- Resolved
-
-
CORE-16441 Syncing ReactOS with Wine Staging 4.18
-
- Untriaged
-